...
                } else CameraUpdateFactory.newLatLngZoom(vertices.first(), 16f)
            camera.move(update)
        }
    }

    Box(
        modifier.testTag("parcel-map").semantics {
            stateDescription = mapDescription
            contentDescription = mapLabel
        }
    ) {
        GoogleMap(
            modifier = Modifier.fillMaxSize(),
...
